[package]
name = "eldenring-auto-arc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
log = "0.4.1"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.2"
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
region = "3.0.2"
winapi = "0.3.9"
practice-tool-tasks = { "git" = "https://github.com/veeenu/practice-tool-core" }
libeldenring = { path = "D:\\Elden Ring Tools\\eldenring-practice-tool-main\\lib\\libeldenring" }

[dependencies.windows]
version = "0.48.0"

[dependencies.retour]
version = "0.3"
features = ["static-detour"]

[patch.crates-io]
libudis86-sys = { git = 'https://github.com/vars1ty/libudis86-sys.git' }
