[package]
name = "eldenring_convenient_deaths"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
crash-handler = "0.6"
pelite = "0.10.0"
eldenring = "0.5.1"
eldenring-util = "0.5.1"
serde = {version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[workspace.dependencies.tracing-tracy]
version = "0.11.3"
features = ["enable"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
